src/main/docs/raml/examples/errors/invalidUser.raml
|
 {
   "errors" : [ {
     "value" : "qwerty",
     "field" : "email",
     "message" : "must be a well-formed email address"
   } ],
   "_links" : {
     "self" : {
       "href" : "http://localhost:8080/users"
     }
   }
 }